--- a/src/options/options.html
+++ b/src/options/options.html
@@ -68,6 +68,14 @@
                 </div>
             </div>
             
+            <div class="filter-option" data-filter="json-output">
+                <div class="toggle-switch enabled" data-toggle="json-output"></div>
+                <div class="filter-content">
+                    <div class="filter-title">Force JSON Output</div>
+                    <div class="filter-description">Enable if your LLM service supports JSON output mode. Disable for services that don't support structured output (e.g., some local models).</div>
+                </div>
+            </div>
+            
             <div class="button-group">
                 <button id="saveButton" class="btn-primary">
                     Save Settings
